--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -48,11 +48,8 @@
     // "moduleResolution": "node",                  /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     "baseUrl": "./",                             /* Base directory to resolve non-absolute module names. */
     "paths": {
-      "client/*": [
-        "client/src/*"
-      ],
-      "server/*": [
-        "server/src/*"
+      "@/*": [
+        "src/*"
       ]
     },                                 /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
@@ -77,5 +74,5 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["./client/**/*.ts", "./client/**/*.tsx", "./server/**/*"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "./shim.d.ts"]
 }
