--- a/client/package.json
+++ b/client/package.json
@@ -2,19 +2,20 @@
   "name": "@api/client",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "i": "pnpm i"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.9.1",
-    "@vitejs/plugin-vue-jsx": "^1.1.8",
-    "@vue/compiler-sfc": "^3.2.16",
-    "vfonts": "^0.1.0",
-    "vite": "^2.5.10",
-    "vite-plugin-components": "^0.13.3"
+    "@vitejs/plugin-vue": "^2.1.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
+    "@vue/compiler-sfc": "^3.2.29",
+    "vite": "^2.7.13",
+    "unplugin-vue-components": "^0.17.14",
+    "sass": "^1.49.0"
   },
   "dependencies": {
-    "naive-ui": "^2.19.1",
-    "vue": "^3.2.16",
-    "vue-router": "4"
+    "vue": "3.2.29",
+    "vue-router": "^4.0.12",
+    "element-plus": "^1.3.0-beta.9"
   }
 }
