--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
     "@vitejs/plugin-vue": "^2.1.0",
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/compiler-sfc": "^3.2.29",
-    "vite": "^2.7.13",
+    "sass": "^1.49.0",
     "unplugin-vue-components": "^0.17.14",
-    "sass": "^1.49.0"
+    "vite": "^2.7.13"
   },
   "dependencies": {
+    "element-plus": "^1.3.0-beta.9",
+    "ts-web-cache": "^1.0.9",
     "vue": "3.2.29",
-    "vue-router": "^4.0.12",
-    "element-plus": "^1.3.0-beta.9"
+    "vue-router": "^4.0.12"
   }
 }
