--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -74,5 +74,5 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "./shim.d.ts"]
+  "include": ["src/**/*.ts", "src/**/*.vue" ,"src/**/*.tsx", "./shim.d.ts"]
 }
