--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "devDependencies": {
     "@types/node": "^16.6.1",
     "typescript": "^4.3.5"
+  },
+  "scripts": {
+    "init": "pnpm install"
   }
 }
