--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "exports": "./building/src/app.js",
   "dependencies": {
     "@sinclair/typebox": "^0.23.3",
+    "bcrypt": "^5.0.1",
     "chalk": "^5.0.0",
     "fastify": "^3.27.0",
+    "fastify-jwt": "^4.1.3",
     "fastify-plugin": "^3.0.1",
     "mongodb": "^4.3.1",
     "redis": "^4.0.2"
