--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "redis": "^4.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
