--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,22 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
     "i": "pnpm i"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.1.0",
-    "@vitejs/plugin-vue-jsx": "^1.3.3",
-    "@vue/compiler-sfc": "^3.2.30",
-    "sass": "^1.49.0",
-    "unplugin-vue-components": "^0.17.14",
-    "vite": "^2.7.13"
+    "@vitejs/plugin-vue": "^2.2.4",
+    "@vitejs/plugin-vue-jsx": "^1.3.8",
+    "@vue/compiler-sfc": "^3.2.31",
+    "sass": "^1.49.9",
+    "unplugin-vue-components": "^0.17.21",
+    "vite": "^2.8.6",
+    "quasar": "^2.5.5",
+    "@quasar/extras": "^1.13.0"
   },
   "dependencies": {
-    "element-plus": "^1.3.0-beta.9",
-    "ts-web-cache": "^1.0.9",
-    "vue": "3.2.30",
+    "fe-dk": "^1.0.9",
+    "vue": "3.2.31",
     "vue-router": "^4.0.12"
   }
 }
