--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "i": "pnpm i"
+    "build:desktop": "vite build --mode desktop"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.4",
@@ -12,13 +12,13 @@
     "@vue/compiler-sfc": "^3.2.31",
     "sass": "^1.49.9",
     "unplugin-vue-components": "^0.17.21",
-    "vite": "^2.8.6",
-    "quasar": "^2.5.5",
-    "@quasar/extras": "^1.13.0"
+    "vite": "^2.8.6"
   },
   "dependencies": {
-    "fe-dk": "^1.0.9",
+    "fe-dk": "^1.0.11",
     "vue": "3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "quasar": "^2.5.5",
+    "@quasar/extras": "^1.13.0"
   }
 }
