--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "building/main.js",
   "scripts": {
-    "dev": "tsc && electron .",
-    "tsc": "tsc"
+    "dev:desktop": "rollup -c &&  electron ."
   },
   "devDependencies": {
-    "electron": "^17.1.2"
+    "electron": "^17.1.2",
+    "rollup": "^2.70.1",
+    "esbuild": "^0.14.27"
   },
   "keywords": [],
   "author": "",
