--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'node --experimental-specifier-resolution=node --loader ts-node/esm' src/app.ts",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec tsx src/app.ts",
     "init": "pnpm i"
   },
-  "type": "module",
-  "exports": "./building/src/app.js",
+
   "dependencies": {
     "@sinclair/typebox": "^0.23.3",
     "chalk": "^5.0.0",
@@ -15,11 +14,12 @@
     "fastify-jwt": "^4.1.3",
     "fastify-plugin": "^3.0.1",
     "mongodb": "^4.3.1",
-    "redis": "^4.0.2"
+    "redis": "^4.0.2",
+    "bcrypt": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0"
+    "nodemon": "^2.0.16",
+    "tsx": "^3.4.2"
   }
 }
